[tool.poetry]
name = "application"
version = "0.1.0"
description = ""
authors = ["pavelixo <pavelixo@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django-environ = "^0.11.2"
django = "^5.1.4"
pillow = "^11.0.0"
aiohttp = "^3.11.10"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.10"
django-redis = "^5.4.0"
djangorestframework = "^3.15.2"
markdown = "^3.7"
django-filter = "^24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
